--- a/package.json
+++ b/package.json
@@ -1,10 +1,33 @@
 {
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "express": "^4.18.2",
+    "express-validator": "^6.14.3",
+    "jwt-simple": "^0.5.6",
+    "moment": "^2.29.4",
     "mysql2": "^3.0.1",
     "sequelize": "^6.28.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
-  }
+  },
+  "name": "api-sequelize",
+  "version": "1.0.0",
+  "main": "index.js",
+  "scripts": {
+    "server": "nodemon src/index.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/aledaledev/films-api.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/aledaledev/films-api/issues"
+  },
+  "homepage": "https://github.com/aledaledev/films-api#readme",
+  "description": ""
 }
